...
                />
        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/root_view"
        android:layout_width="fill_parent"
        android:layout_height="590dp"
        android:orientation="vertical"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="-15dp"
...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity"
            />

        <LinearLayout
            android:id="@+id/overlay"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white"
...
                    android:layout_marginBottom="3dp"
                    />
            </androidx.core.widget.NestedScrollView>


            <Button
                android:id="@+id/buttonReserve"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"
                android:backgroundTint="#8A00C2"
                android:fontFamily="@font/dmsans"
                android:text="Make Reservation"
                android:textSize="15dp"
                android:textAllCaps="false"

                android:textColor="@color/white"
                android:onClick="clickButton"
                app:cornerRadius="10dp"
...
